[tool.poetry]
name = "mvc-model"
version = "0.1.0"
description = ""
authors = ["jekxkan <smirnova.eyu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0.post0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"